# eved-view

./: CLAUDE.md  Makefile  README.md  config.toml  evedview.py  main.py  pyproject.toml
app/: evedview.py
app/commands/: map.py
app/converters/: general.py  map.py  trip.py
app/geo/: geomath.py
app/models/: MapNode.py  Signal.py  Trip.py  TripModel.py  trip.py
app/repositories/: trip.py
app/viewmodels/: MapViewModel.py  circle.py  map.py  polygon.py  polyline.py  shape.py
app/views/: MainView.py  MapView.py  PolygonPropertyView.py  PolylinePropertyView.py  TripView.py  main.py  map.py  polygon.py  polyline.py  trip.py
app/views/editors/: circle.py  polygon.py  polyline.py
docs/: performance_optimizations.md  tasks.md
nicemvvm/: Command.py  Observable.py  ResourceLocator.py  ValueConverter.py  command.py  nm.py  tasks.py
nicemvvm/controls/: BoundControl.py  Button.py  ColorInput.py  DataGrid.py  GridView.py  Label.py  LeafletMap.py  NumberInput.py  button.py  grid_view.py  label.py  menu.py
nicemvvm/controls/inputs/: color.py  number.py  switch.py
nicemvvm/controls/leaflet/: circle.py  map.py  path.py  polygon.py  (+2 more)
nicemvvm/observables/: Observable.py  ObservableCollections.py  collections.py  observability.py
src/controls/: GridView.py  LeafletMap.py
src/db/: EvedDb.py
src/message/: Messenger.py  Observable.py
src/models/: MapModel.py
src/services/: trip.py
src/viewmodels/: BaseViewModel.py  MapViewModel.py  TripSelectViewModel.py  ViewModelLocator.py
src/views/: MapView.py
tests/: test_map_converters.py
tools/: config.py
(+7 files in other folders)
