[project]
name = "eved-view"
version = "0.1.0"
description = "eVED Web-based viewer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=2.14.1",
    "numpy>=2.2.4",
    "observable-properties>=4.0.0",
    "pandas>=2.2.3",
    "shapely>=2.1.1",
    "tomli>=2.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
